err/logging2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/logging2'...
Listing './lib/python3.5/site-packages/logging2/handlers'...
Compiling './lib/python3.5/site-packages/logging2/handlers/abc.py'...
***   File "./lib/python3.5/site-packages/logging2/handlers/abc.py", line 11
    DEFAULT_LOG_LEVEL: LogLevel = LogLevel.info
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logging2/handlers/files.py'...
***   File "./lib/python3.5/site-packages/logging2/handlers/files.py", line 43
    self.fh: StreamReaderWriter = codecs.open(
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logging2/handlers/sockets.py'...
***   File "./lib/python3.5/site-packages/logging2/handlers/sockets.py", line 29
    self.host: str = kwargs.get('host')
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logging2/handlers/streaming.py'...
***   File "./lib/python3.5/site-packages/logging2/handlers/streaming.py", line 25
    self.stream: TextIOWrapper = stream
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logging2/levels.py'...
***   File "./lib/python3.5/site-packages/logging2/levels.py", line 9
    debug: int = 0
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logging2/loggers.py'...
***   File "./lib/python3.5/site-packages/logging2/loggers.py", line 23
    DEFAULT_TEMPLATE: str = '{timestamp} {level} {name}: {message}'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logging2-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
